# submit_mail

./: .gitignore  LICENSE  Makefile.am  README.md  TODO.md  configure.ac
lib/submit_mail/: message.c  message.h  message_format.c  message_format.h  server.c  server.h  server_error.c  server_error.h  str.c  str.h  submit_mail.h
src/: main.c  options.c  options.h
